force-app/main/default/objects/Account/fields/TarifInformation__c.field-meta.xml
<CustomField>
    <fullName>TarifInformation__c</fullName>
    <label>Tarif Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>