force-app/main/default/objects/Account/fields/TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxNumber__c</fullName>
    <description>tax number to display on the invoice of foreign countries</description>
    <label>Tax Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>