force-app/main/default/objects/Account/fields/TermsOfPayment__c.field-meta.xml
<CustomField>
    <fullName>TermsOfPayment__c</fullName>
    <label>Terms of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TermsOfPayment</valueSetName>
    </valueSet>
</CustomField>