force-app/main/default/objects/Account/fields/TEST_NextGen01_001__c.field-meta.xml
<CustomField>
    <fullName>TEST_NextGen01_001__c</fullName>
    <description>Test by Silvio and Iryna (16.02.2026) for Migration.</description>
    <inlineHelpText>Test by Silvio and Iryna (16.02.2026) for Migration.</inlineHelpText>
    <label>TEST_NextGen01_001</label>
    <length>50</length>
    <type>Text</type>
</CustomField>