force-app/main/default/objects/Account/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <inlineHelpText>Zentraler Firmenindex: http://www.zefix.ch</inlineHelpText>
    <label>UID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>