force-app/main/default/objects/Account/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <description>vat number to be displayed on invoice for foreign countries</description>
    <label>Vat Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>