force-app/main/default/objects/Account/fields/VATPercent__c.field-meta.xml
<CustomField>
    <fullName>VATPercent__c</fullName>
    <label>VAT %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VATPercent</valueSetName>
    </valueSet>
</CustomField>