force-app/main/default/objects/Account/fields/ZAccountId15__c.field-meta.xml
<CustomField>
    <fullName>ZAccountId15__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZAccountId15</label>
    <type>Text</type>
</CustomField>