force-app/main/default/objects/Account/fields/zefixch__c.field-meta.xml
<CustomField>
    <fullName>zefixch__c</fullName>
    <formula>HYPERLINK(&quot;https://www.zefix.ch/de/search/entity/list?name=&quot;&amp;Name, &quot;Lookup Company on ZEFIX&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zefix.ch</label>
    <type>Text</type>
</CustomField>