force-app/main/default/objects/Account/fields/ZEmailCurrentOwner__c.field-meta.xml
<CustomField>
    <fullName>ZEmailCurrentOwner__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>ZEmailCurrentOwner</label>
    <type>Email</type>
</CustomField>