force-app/main/default/objects/Account/fields/ZOwnerId15__c.field-meta.xml
<CustomField>
    <fullName>ZOwnerId15__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZOwnerId15</label>
    <type>Text</type>
</CustomField>