force-app/main/default/objects/Account/recordTypes/CompanyAccount.recordType-meta.xml
<RecordType>
    <fullName>CompanyAccount</fullName>
    <active>true</active>
    <description>Create a company (legal entity // Unternehmensaccount erstellen</description>
    <label>Company Account</label>
</RecordType>