force-app/main/default/objects/Account/recordTypes/InternalAccount.recordType-meta.xml
<RecordType>
    <fullName>InternalAccount</fullName>
    <active>true</active>
    <description>Use this record type to create a BLC Unit</description>
    <label>Internal Account</label>
</RecordType>