force-app/main/default/objects/Account/recordTypes/Summary_Account.recordType-meta.xml
<RecordType>
    <fullName>Summary_Account</fullName>
    <active>true</active>
    <description>Do not use this record type to create any accounts</description>
    <label>Summary Account</label>
</RecordType>