force-app/main/default/objects/Account/validationRules/ACM002_Can_not_edit_Summary_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM002_Can_not_edit_Summary_Accounts</fullName>
    <active>true</active>
    <description>Can not edit Summary Accounts</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

OR( 
PRIORVALUE(Name) =&quot;Summary - Former Employees Company Accounts&quot;,
PRIORVALUE(Name) =&quot;Summary - Alumni Internal Accounts&quot;,
PRIORVALUE(Name) =&quot;Summary - Deceased&quot;,
PRIORVALUE(Name) =&quot;Summary - Private Contacts&quot;
)
)</errorConditionFormula>
    <errorMessage>You can not change Summary Accounts. For questions get in touch with André Ryf.
(ACM002)</errorMessage>
</ValidationRule>