force-app/main/default/objects/Account/validationRules/ACM003_Inactive_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM003_Inactive_Not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 $User.PS480FunctionValidationRulesActive__c =true,

NOT( $Profile.Id=&quot;00eb0000000wkmg&quot;),

PRIORVALUE(Inactive__c) =true, 
NOT(LastModifiedDate &lt;&gt; LastModifiedDate)
)</errorConditionFormula>
    <errorMessage>The Account has been flagged inactive and can therefore not be edited. Please get in touch with Finance if you do not agree with the inactive flag.
(ACM003)</errorMessage>
</ValidationRule>