force-app/main/default/objects/Account/validationRules/ACM006_Account_Debtor_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM006_Account_Debtor_No_Change</fullName>
    <active>true</active>
    <description>Account Debtor can not be changed from True to False</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
 AbacusDebtor__c = False,
 $User.IsFinanceManager__c =False,
PRIORVALUE(AbacusDebtor__c)= true
)</errorConditionFormula>
    <errorDisplayField>AbacusDebtor__c</errorDisplayField>
    <errorMessage>Account Debtor can not be changed from True to False. Please get in touch with Finance.
(ACM006)</errorMessage>
</ValidationRule>