force-app/main/default/objects/Account/validationRules/ACM007_Account_Supplier_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM007_Account_Supplier_No_Change</fullName>
    <active>true</active>
    <description>Account Supplier can not be changed from True to False</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
 AbacusSupplier__c = False,
 $User.IsFinanceManager__c =False,
PRIORVALUE(AbacusSupplier__c) = true
)</errorConditionFormula>
    <errorDisplayField>AbacusSupplier__c</errorDisplayField>
    <errorMessage>Account Supplier can not be changed from True to False. Please get in touch with Finance.
(ACM007)</errorMessage>
</ValidationRule>