force-app/main/default/objects/Account/validationRules/ACM008_AbacusDebtorTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM008_AbacusDebtorTrue</fullName>
    <active>true</active>
    <description>All Data ready for Flag AbacusDeptor=True</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
 AbacusDebtor__c = True,

OR(
ISBLANK (BillingZip__c),
ISBLANK (BillingCity__c),
ISBLANK (TEXT (CurrencyIsoCode))
)
)</errorConditionFormula>
    <errorMessage>The Invoice Receiver Account is not complete. Please adjust in a new tab to complete data and then save again.
(ACM008)</errorMessage>
</ValidationRule>