force-app/main/default/objects/Account/validationRules/ACM010_AccountName_Max_100.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM010_AccountName_Max_100</fullName>
    <active>true</active>
    <description>Length of Account Name can not exceed 100</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 
len(Name)&gt;100
)</errorConditionFormula>
    <errorMessage>The Account Name can not exceed 100 characters.
(ACM010)</errorMessage>
</ValidationRule>