force-app/main/default/objects/Account/validationRules/ACM011_ZIP_Length_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM011_ZIP_Length_Check</fullName>
    <active>true</active>
    <description>Length of ZIP for CH and DE</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true, 

OR(

AND(
TEXT(LocationCountry__c)=&quot;SWITZERLAND&quot;,
NOT(ISBLANK(LocationZip__c)),
NOT(LEN(LocationZip__c )=4)
),
AND(
TEXT(BillingCountry__c)=&quot;SWITZERLAND&quot;,
NOT(ISBLANK(BillingZip__c)),
NOT(LEN(BillingZip__c )=4)
),
AND(
TEXT(LocationCountry__c)=&quot;GERMANY&quot;,
NOT(ISBLANK(LocationZip__c)),
NOT(LEN(LocationZip__c )=5)
),
AND(
TEXT(BillingCountry__c)=&quot;GERMANY&quot;,
NOT(ISBLANK(BillingZip__c)),
NOT(LEN(BillingZip__c )=5)
)
)
)</errorConditionFormula>
    <errorMessage>The ZIP is not correct, please adjust.
(ACM011)</errorMessage>
</ValidationRule>