force-app/main/default/objects/Account/validationRules/ACM012_PrivatePersonChec.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM012_PrivatePersonChec</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
OR(
ISPICKVAL( LegalNature__c ,&quot;Individual Company&quot;),
ISPICKVAL( LegalNature__c, &quot;Natural Entity (Private Person)&quot;)
), 
OR(
ISBLANK(LastName__c),
ISBLANK(FirstName__c)
)
)</errorConditionFormula>
    <errorDisplayField>LastName__c</errorDisplayField>
    <errorMessage>Please fill out First- &amp; Last Name.
(ACM012)</errorMessage>
</ValidationRule>