force-app/main/default/objects/Account/validationRules/ACM014_Legal_Nature.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM014_Legal_Nature</fullName>
    <active>true</active>
    <description>Please fill out the Legal Nature</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ISNEW(),
RecordType.Id &lt;&gt; &apos;012b0000000cEKe&apos;,
TEXT(AccountSource) &lt;&gt; &apos;Data.com&apos;, 
ISBLANK(TEXT(LegalNature__c))
)</errorConditionFormula>
    <errorDisplayField>LegalNature__c</errorDisplayField>
    <errorMessage>Please fill out the Legal Nature of this Account.
(ACM014)</errorMessage>
</ValidationRule>