force-app/main/default/objects/Account/validationRules/ACM016_Trade_25_VAT.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM016_Trade_25_VAT</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
 $User.UR100Trade25VAT__c =false,
ISPICKVAL( VATPercent__c, &quot;2.5%&quot;) || ISPICKVAL( VATPercent__c, &quot;2.6%&quot;)
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You are not allowed to choose VAT 2.5%/2.6%. Please get in touch with Finance.
(ACM016)</errorMessage>
</ValidationRule>