force-app/main/default/objects/Account/validationRules/ACM017_VAT_not_8_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>ACM017_VAT_not_8_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
$User.IsFinanceManager__c = false,
ISPICKVAL( VATPercent__c, &quot;8%&quot;)
)</errorConditionFormula>
    <errorDisplayField>VATPercent__c</errorDisplayField>
    <errorMessage>You are not allowed to choose VAT 8%. Please get in touch with Finance.
(ACM017)</errorMessage>
</ValidationRule>