force-app/main/default/objects/Account/listViews/All_Accounts_active.listView-meta.xml
<ListView>
    <fullName>All_Accounts_active</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>UID__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.OWNERSHIP</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>AbacusAccountNr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Accounts (active)</label>
    <language>en_US</language>
</ListView>