force-app/main/default/objects/Account/listViews/All_Freelancer_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Freelancer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Freelancer__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>BillingCity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Freelancer__c</field>
        <operation>equals</operation>
        <value>Freelancer Registered,Freelancer Not Registered</value>
    </filters>
    <label>All Freelancer Accounts</label>
</ListView>