force-app/main/default/objects/Account/listViews/My_Accounts_Owner.listView-meta.xml
<ListView>
    <fullName>My_Accounts_Owner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LocationStreetNr__c</columns>
    <columns>LocationCity__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts (Owner)</label>
</ListView>