force-app/main/default/objects/Account/listViews/Quality_Account_Fax.listView-meta.xml
<ListView>
    <fullName>Quality_Account_Fax</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CompanyAccount</value>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE2</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE2</field>
        <operation>notContain</operation>
        <value>+</value>
    </filters>
    <label>Quality - Account - Fax</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>