force-app/main/default/objects/Account/listViews/Quality_Account_Language.listView-meta.xml
<ListView>
    <fullName>Quality_Account_Language</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>LocationCountry__c</columns>
    <columns>AccountLanguage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CompanyAccount</value>
    </filters>
    <filters>
        <field>AccountLanguage__c</field>
        <operation>equals</operation>
    </filters>
    <label>Quality - Account - Language</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>