force-app/main/default/objects/Account/listViews/Quality_Account_Location_Country.listView-meta.xml
<ListView>
    <fullName>Quality_Account_Location_Country</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LocationCity__c</columns>
    <columns>LocationCountry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CompanyAccount</value>
    </filters>
    <filters>
        <field>LocationCountry__c</field>
        <operation>equals</operation>
    </filters>
    <label>Quality - Account - Location Country</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>