force-app/main/default/objects/Account/listViews/Quality_Account_Owner_Inactive.listView-meta.xml
<ListView>
    <fullName>Quality_Account_Owner_Inactive</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CompanyAccount</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Quality - Account - Owner Inactive</label>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>