force-app/main/default/objects/Account/listViews/Quality_Account_Phone.listView-meta.xml
<ListView>
    <fullName>Quality_Account_Phone</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>LocationCountry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.CompanyAccount</value>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>notContain</operation>
        <value>+</value>
    </filters>
    <label>Quality - Account - Phone</label>
    <language>en_US</language>
    <sharedTo>
        <group>Skywalk_Skywalk_Data_Quality</group>
    </sharedTo>
</ListView>